# old_code

./: Read me first.docx
lidar_pi/: _Xauthority  _bash_history  _xsession-errors  _xsession-errors.old  lasersensor  server.cpp  testclient  testclient.cpp
lidar_pi/.config/dconf/: user
lidar_pi/.config/pulse/: cookie
lidar_pi/.dbus/session-bus/: 18634e1404184594bc66ddacfba0bf43-0  18634e1404184594bc66ddacfba0bf43-10
lidar_pi/.local/share/: recently-used.xbel
lidar_pi/LMSprogram/: laser  lasersensor.cpp  lmsheader.h  opensocket.cpp
lidar_pi/laserthing/: a.out  definition.h  display  entryfile.cpp  entryfile.cpp.save  laser  laserthing  laserthing1  save_entryfile.cpp  sourcecode.cpp  sourcecode.cpp.save  tcp_def.cpp  tcp_entry.cpp  tcp_entry_save.cpp  tcp_source.cpp  tcplaser  test  test.cpp  test.h  testsource.cpp
lidar_pi/static ip info/: dhcpcd.conf  readme
tf_ws/devel/: _catkin  _rosinstall  _setup_util.py  setup.sh
tf_ws/devel/include/gps_package/: gps_message.h
tf_ws/devel/include/lms_package/: lms_message.h
tf_ws/devel/lib/gps_package/: gps_broadcaster  gps_position_tf  gps_pub
tf_ws/devel/lib/lms_package/: lms_gps_listener  lms_position_tf  lms_pub  lms_publish  lms_sub_pub  lms_topic  parrot  pointcloud  save_sub_pub
tf_ws/devel/lib/pkgconfig/: gps_package.pc  lms_package.pc  sync_package.pc  tf_platform.pc
tf_ws/devel/lib/sync_package/: synchroniser
tf_ws/src/gps_package/: CMakeLists.txt
tf_ws/src/gps_package/src/: gps_definition.h  gps_entryfile.cpp
tf_ws/src/lms_package/: CMakeLists.txt  package.xml
tf_ws/src/sync_package/: CMakeLists.txt
tf_ws/src/sync_package/src/: synchroniser.cpp
tf_ws/src/sync_package/src/launch/: sync.launch
tf_ws/src/tf_platform/: CMakeLists.txt
tf_ws/src/tf_platform/src/: broadcaster.cpp  gps_broadcaster.cpp  tf_broadcaster.cpp
(+31 files in other folders)
